# cppsnippets

./: .clang-format  .gitignore  Makefile  README.md
Tree/: Tree.h  Tree.sln  Tree.vcxproj  Tree.vcxproj.filters  main.cpp
algorithms/: Makefile  algorithms.sln  algorithms.vcxproj  algorithms.vcxproj.filters  copy.cpp  main.cpp  registry.h  sort.cpp  utility.cpp  utility.h
bits/: Makefile  main.cpp
boost_signals/: Makefile  main.cpp
boostversion/: Makefile  main.cpp
charconv/: Makefile  main.cpp
concepts/: Makefile  main.cpp
const_casts/: Makefile  casts.cpp
copy_elision/: Makefile  copy_elision.cpp  spy.h
cormen_puzzles/: cormen_puzzles.sln  cormen_puzzles.vcxproj  main.cpp  test.cpp
cpp20/: Makefile  main.cpp
double_dispatch/: dispatch.cpp  double_dispatch.vcxproj  double_dispatch.vcxproj.filters
exceptions/: CMakeLists.txt  main.cpp
formatted_output/: Makefile  formats.cpp
gcc_warnings/: Makefile  main.cpp
gtest_sample/: CMakeLists.txt  Readme.md  hello_test.cpp  main.cpp  myfunctions.h
initialization/: Makefile  main.cpp  util.cpp  util.h
lambdas/: Makefile  lambda.cpp  main.cpp
list_tree/: Makefile  list.h  main.cpp
literals/: Makefile  literals.cpp
move/: Makefile  cont.h  default_members.cpp  expression_category.cpp  forward.cpp  main.cpp  move.sln  move.vcxproj  move.vcxproj.filters  move_summary.md  rvalue_refs.cpp  spy.h  util.h  value_category.dot
numerics/: Makefile  all_tests.h  inttest.cpp  main.cpp  valarray_test.cpp
operators/: CMakeLists.txt  Makefile  main.cpp  op_test.cpp  op_test.h
pikus_atomics/: Makefile  (+4 more)
(+57 files in other folders)
